--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.4.0",
